# AntLife2

./: CMakeLists.txt  LICENSE  README.md
src/: ant.cpp  ant.h  cell_grid.h  main.cpp  main2.cpp  pheromone_cell.h  simulator.h  world.cpp  world.h
